youfull/objects/Leader_Downline_Summary__c.object
<CustomObject>
    <fields>
        <fullName>ACCT_NR__c</fullName>
        <label>Account Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ALL_DOWNLN_CNT_WITH_REMV__c</fullName>
        <description>Contains the count of all the downlines of the sales leader including the removed representative. The removed Representatives to be included are those required by the market, because they could be reinstated or because they have had some activity in the campaign.</description>
        <inlineHelpText>Contains the count of all the downlines of the sales leader including the removed representative. The removed Representatives to be included are those required by the market, because they could be reinstated or because they have had some activity in the c</inlineHelpText>
        <label>ALL_DOWNLN_CNT_WITH_REMV</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ALL_DWNLN_CNT__c</fullName>
        <label>All Generation Staff</label>
        <precision>13</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ALL_GEN_VOLM_AMT__c</fullName>
        <label>Downline Volume</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ActionItem_Anniv_Count__c</fullName>
        <label>ActionItem Anniv Count</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ActionItem_Annv_Count__c</fullName>
        <label>ActionItem Anniv Count</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ActionItem_Birthday_Count__c</fullName>
        <label>ActionItem Birthday Count</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ActionItem_Cut_Off_Count__c</fullName>
        <label>Action Item Cutt Of Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BOOK1_BLCKD_UNIT_SLS_AMT__c</fullName>
        <label>Book 1 Blocked Unit Sales</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BOOK1_GRP_UNIT_SLS_AMT__c</fullName>
        <label>Book 1 Team Unti Sales</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BOOK2_BLCKD_UNIT_SLS_AMT__c</fullName>
        <label>Book2 Blocked Unit Sales</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BOOK2_GRP_UNIT_SLS_AMT__c</fullName>
        <label>Book2 Team Unit Sales</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EXEC_UNIT_SLS__c</fullName>
        <label>Executive Sales</label>
        <precision>13</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EXEC_VOLM_AMT__c</fullName>
        <label>Executive Volume</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EXGENRTN_1_GRP_ACTV_REP_CNT__c</fullName>
        <label>EXGENRTN_1_GRP_ACTV_REP_CNT</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EXGENRTN_1_GRP_APPT_CNT__c</fullName>
        <label>EXGENRTN_1_GRP_APPT_CNT</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EXGENRTN_1_GRP_BLCKD_UNIT_SLS_AMT__c</fullName>
        <label>EXGENRTN_1_GRP_BLCKD_UNIT_SLS_AMT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EXGENRTN_1_TITL_1_STF_CNT__c</fullName>
        <label>EXGENRTN_1_TITL_1_STF_CNT</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EXGENRTN_1_TITL_2_STF_CNT__c</fullName>
        <label>EXGENRTN_1_TITL_2_STF_CNT</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EXGENRTN_1_TITL_3_STF_CNT__c</fullName>
        <label>EXGENRTN_1_TITL_3_STF_CNT</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EXGENRTN_1_TOTAL_EXEC_TITL_STF_CNT__c</fullName>
        <label>No. of Executive Groups</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EXGENRTN_2_GRP_ACTV_REP_CNT__c</fullName>
        <label>EXGENRTN_2_GRP_ACTV_REP_CNT</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EXGENRTN_2_GRP_APPT_CNT__c</fullName>
        <label>EXGENRTN_2_GRP_APPT_CNT</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EXGENRTN_2_GRP_BLCKD_UNIT_SLS_AMT__c</fullName>
        <label>EXGENRTN_2_GRP_BLCKD_UNIT_SLS_AMT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EXGENRTN_2_TOTAL_EXEC_TITL_STF_CNT__c</fullName>
        <label>Exec Gen 2 Exec Title Staff Count</label>
        <precision>13</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EXGENRTN_3_GRP_ACTV_REP_CNT__c</fullName>
        <label>EXGENRTN_3_GRP_ACTV_REP_CNT</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EXGENRTN_3_GRP_APPT_CNT__c</fullName>
        <label>EXGENRTN_3_GRP_APPT_CNT</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EXGENRTN_3_GRP_BLCKD_UNIT_SLS_AMT__c</fullName>
        <label>EXGENRTN_3_GRP_BLCKD_UNIT_SLS_AMT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EXGENRTN_3_TOTAL_EXEC_TITL_STF_CNT__c</fullName>
        <label>Exec Gen 2 Exec Title Staff Count</label>
        <precision>13</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EXGENRTN_4PLUS_GRP_ACTV_REP_CNT__c</fullName>
        <label>EXGENRTN_4PLUS_GRP_ACTV_REP_CNT</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EXGENRTN_4PLUS_GRP_APPT_CNT__c</fullName>
        <label>EXGENRTN_4PLUS_GRP_APPT_CNT</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EXGENRTN_4PLUS_GRP_BLCKD_UNIT_SLS_AMT__c</fullName>
        <label>EXGENRTN_4PLUS_GRP_BLCKD_UNIT_SLS_AMT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FLD_SLS_CMPGN_NR__c</fullName>
        <label>Campaign Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>G1_IN_ZONE_BAL_AMT__c</fullName>
        <label>G1 Next Due Amount</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>G1_IN_ZONE_HOLD_ORDER_AMT__c</fullName>
        <label>Hold Order Amount</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>G1_IN_ZONE_NO_ORD_CNT__c</fullName>
        <label># G1 Inactive in Current Campaign</label>
        <precision>13</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>G1_IN_ZONE_PAST_DUE_AMT__c</fullName>
        <label>G1 Amount Overdue</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>G1_IN_ZONE_POT_RMVD_REP_CNT__c</fullName>
        <label># G1 Potential Removals</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>G1_IN_ZONE_UND_MOE_REP_CNT__c</fullName>
        <label># G1 w/ Personal Sales below Min. Order</label>
        <precision>13</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>G1_LOA_0_6_REP_CNT__c</fullName>
        <label>G1_LOA_0_6_REP_CNT</label>
        <precision>13</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>G1_LOA_0_REP_CNT__c</fullName>
        <label>G1_LOA_0_REP_CNT</label>
        <precision>13</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GENRTN_1_ACT_PCT__c</fullName>
        <label>G1 Activity</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GENRTN_1_APPT_CNT__c</fullName>
        <label>GENRTN_1_APPT_CNT</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GENRTN_1_LDR_CNT_TXT__c</fullName>
        <label>G1 Leaders</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GENRTN_1_QPA_CNT__c</fullName>
        <label>Gen 1 Qualfied Personal Appointments</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GENRTN_1_RMVL_CNT__c</fullName>
        <label>G1 Removals</label>
        <precision>13</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GENRTN_1_STF_CNT__c</fullName>
        <label>G1 Staff Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GENRTN_1_TITL_0_STF_CNT__c</fullName>
        <label>Gen 1 Title 0 Leader Count (Candidates)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GENRTN_1_TITL_10_NEW_STF_CNT__c</fullName>
        <label>Gen 1 Title 10 Leader New Count</label>
        <precision>13</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GENRTN_1_TITL_10_STF_CNT__c</fullName>
        <label>Gen 1 Title 10 Leader Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GENRTN_1_TITL_11_NEW_STF_CNT__c</fullName>
        <label>Gen 1 Title 11 Leader New Count</label>
        <precision>13</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GENRTN_1_TITL_11_STF_CNT__c</fullName>
        <label>Gen 1 Title 11 Leader Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GENRTN_1_TITL_12_NEW_STF_CNT__c</fullName>
        <label>Gen 1 Title 12 Leader New Count</label>
        <precision>13</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GENRTN_1_TITL_STF_CNT__c</fullName>
        <formula>GENRTN_1_TITL_1_STF_CNT__c + GENRTN_1_TITL_2_STF_CNT__c + GENRTN_1_TITL_3_STF_CNT__c + GENRTN_1_TITL_4_STF_CNT__c + GENRTN_1_TITL_5_STF_CNT__c + GENRTN_1_TITL_6_STF_CNT__c + GENRTN_1_TITL_7_STF_CNT__c + GENRTN_1_TITL_8_STF_CNT__c + GENRTN_1_TITL_9_STF_CNT__c + GENRTN_1_TITL_10_STF_CNT__c + GENRTN_1_TITL_11_STF_CNT__c + GENRTN_1_TITL_12_STF_CNT__c + GENRTN_1_TITL_13_STF_CNT__c + GENRTN_1_TITL_14_STF_CNT__c
+GENRTN_1_TITL_15_STF_CNT__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gen 1 Total Titled Leaders</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GENRTN_1_TOTAL_EXEC_TITL_STF_CNT__c</fullName>
        <label>GENRTN_1_TOTAL_EXEC_TITL_STF_CNT</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GENRTN_1_TOTAL_NEW_EXEC_TITL_STF_CNT__c</fullName>
        <label>Gen 1  Total New Executive Title Count</label>
        <precision>13</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GENRTN_1_UNIT_SLS_AMT__c</fullName>
        <label>GENRTN_1_UNIT_SLS_AMT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GENRTN_2_ACT_PCT__c</fullName>
        <label>GENRTN_2_ACT_PCT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GENRTN_2_APPT_CNT__c</fullName>
        <label>GENRTN_2_APPT_CNT</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GENRTN_2_UNIT_SLS_AMT__c</fullName>
        <label>GENRTN_2_UNIT_SLS_AMT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GENRTN_3_ACT_PCT__c</fullName>
        <label>GENRTN_3_ACT_PCT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GENRTN_3_APPT_CNT__c</fullName>
        <label>GENRTN_3_APPT_CNT</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GENRTN_3_UNIT_SLS_AMT__c</fullName>
        <label>GENRTN_3_UNIT_SLS_AMT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GENTRTN_1_ACTV_REP_CNT__c</fullName>
        <label>G1 Actives</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GENTRTN_1_ORD_SBMTD_CNT__c</fullName>
        <label>Potential Active Representatives</label>
        <precision>13</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GENTRTN_2_ACTV_REP_CNT__c</fullName>
        <label>GENTRTN_2_ACTV_REP_CNT</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GENTRTN_3_ACTV_REP_CNT__c</fullName>
        <label>GENTRTN_3_ACTV_REP_CNT</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GROUP_ABV_MOE_REP_CNT__c</fullName>
        <label>Team Reps above Minimum to Earn</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GROUP_UND_MOE_REP_CNT__c</fullName>
        <label>Team Reps Under Minimum to Earn</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GRP_ABV_MOV_REP_CNT__c</fullName>
        <label>Team Reps above Minimum Order value</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GRP_ACTV_REP_CNT__c</fullName>
        <label>Team Active Reps</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GRP_APPT_CNT__c</fullName>
        <label>Appointments</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GRP_AT_RISK_REP_CNT__c</fullName>
        <label>Team Reps At Risk!</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GRP_BAL_AMT__c</fullName>
        <label>Balance Due</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GRP_BAL_REP_CNT__c</fullName>
        <label>Team Balance Rep Cnt</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GRP_BLCKD_UNIT_SLS_AMT__c</fullName>
        <formula>GRP_INVCD_BLCKD_SLS_AMT__c + GRP_SUBMTD_BLCKD_SLS_AMT__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Blocked GS</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GRP_BRCHR_CNT__c</fullName>
        <label>Team Brochure Count</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GRP_CUST_CNT__c</fullName>
        <label>Customers Served</label>
        <precision>13</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GRP_FAP_AWD_SLS_AMT__c</fullName>
        <label>Super Hits Amount</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GRP_FAP_CNT__c</fullName>
        <label>Super Hits Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GRP_INHRTD_CNT__c</fullName>
        <label>Inherited Count</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GRP_INVCD_BLCKD_SLS_AMT__c</fullName>
        <label>Total Invoiced Blocked Unit Sales</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GRP_INVCD_SLS_AMT__c</fullName>
        <formula>GRP_INVC_AWRD_SLS_AMT__c +  GRP_INVC_RTURN_AWRD_SLS_AMT__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total  Invoiced Award Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GRP_INVC_AWRD_SLS_AMT__c</fullName>
        <label>Award Sales Invoiced</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GRP_INVC_RTURN_AWRD_SLS_AMT__c</fullName>
        <label>Return Award Sales Invoiced</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GRP_IN_ZONE_PCT__c</fullName>
        <formula>IF (OR (GRP_UNIT_SLS_AMT__c = 0, GRP_UNIT_SLS_AMT__c = null), 0, (GRP_IN_ZONE_QV__c/GRP_UNIT_SLS_AMT__c)*100)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% Group Sales In Zone</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GRP_IN_ZONE_QV__c</fullName>
        <label>In Zone Group Sales</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GRP_IN_ZONE_RTURN_AWRD_SLS_AMT__c</fullName>
        <label>Team In zone Returns Amount</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GRP_LDR_EARNING_AMT__c</fullName>
        <label>Earnings (Leadership only)</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GRP_LLOA_1_6_REP_CNT__c</fullName>
        <label>Team LLOA 1 to 6</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GRP_LOA_0_REP_CNT__c</fullName>
        <label>Team LOA 0</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GRP_MRKT_TAG_1_CNT__c</fullName>
        <label>Market Tag 1</label>
        <precision>13</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GRP_MRKT_TAG_2_AMT__c</fullName>
        <label>Market tag 2</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GRP_MRKT_TAG_3_TXT__c</fullName>
        <label>Market Tag 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GRP_NET_SLS_AMT__c</fullName>
        <label>Net Sales</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GRP_NO_ORD_CNT__c</fullName>
        <label>No Order Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GRP_ORD_CNT__c</fullName>
        <label>Team Order Count</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GRP_ORD_HOLD_AMT__c</fullName>
        <label>Order on Hold Amount</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GRP_ORD_SBMTD_CNT__c</fullName>
        <label>Team Order Pending</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GRP_PAST_DUE_AMT__c</fullName>
        <label>Past Due</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GRP_PAST_DUE_REP_CNT__c</fullName>
        <label>Past Due Reps</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GRP_PENDNG_ORD_AMT__c</fullName>
        <label>Saved Orders Amount</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GRP_QPA_CNT__c</fullName>
        <label>Qualifying Personal Appointments (QPA)</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GRP_QPA_RATE_PCT__c</fullName>
        <formula>100*(GRP_QPA_CNT__c / GRP_APPT_CNT__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>%QPA</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GRP_REP_CNT__c</fullName>
        <label>Team Staff Count</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GRP_RISNG_STAR_CNT__c</fullName>
        <label>Team Rising Star</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GRP_RMOVL_CNT__c</fullName>
        <label>Removals</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GRP_RNSTMT_CNT__c</fullName>
        <label>Reinstatements</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GRP_RTURN_NET_SLS_AMT__c</fullName>
        <label>Return Net Sales</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GRP_RTURN_REP_CNT__c</fullName>
        <label>Team Returns Count</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GRP_SUBMTD_AWRD_SLS_AMT__c</fullName>
        <label>Award Sales Submitted</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GRP_SUBMTD_BLCKD_SLS_AMT__c</fullName>
        <label>Total Submitted Blocked Unit Sales</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GRP_SUBMTD_REP_CNT__c</fullName>
        <label>Count of Representatives with Submitted</label>
        <precision>13</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GRP_SUBMTD_RTURN_AWRD_SLS_AMT__c</fullName>
        <label>Return Award Sales Submitted</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GRP_SUBMTD_SLS_AMT__c</fullName>
        <formula>GRP_SUBMTD_AWRD_SLS_AMT__c +  GRP_SUBMTD_RTURN_AWRD_SLS_AMT__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total  Submitted Award Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GRP_TAR_CNT__c</fullName>
        <label>Team Title At Risk</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GRP_TITL_1_STF_CNT__c</fullName>
        <label>Team Candidates</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GRP_TITL_DMTD_CNT__c</fullName>
        <label>Team Title Demoted</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GRP_TITL_PROMTD_CNT__c</fullName>
        <label>Team Title Promoted</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GRP_TUS_ABV_QLFR_CNT__c</fullName>
        <label>Team Sales Above title Count</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GRP_TUS_ABV_QLFR_IND__c</fullName>
        <label>Team Unit Sales Above Group Qualifier</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GRP_TUS_BLW_QLFR_CNT__c</fullName>
        <label>Team Sales Below title Count</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GRP_TUS_BLW_QLFR_IND__c</fullName>
        <label>Team Unit Sales Under Group Qualifier</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GRP_UND_MOV_REP_CNT__c</fullName>
        <label>Team Reps Under Minimum Order Value</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GRP_UNIT_SLS_AMT__c</fullName>
        <formula>GRP_INVC_AWRD_SLS_AMT__c +  GRP_SUBMTD_AWRD_SLS_AMT__c + GRP_INVC_RTURN_AWRD_SLS_AMT__c + GRP_SUBMTD_RTURN_AWRD_SLS_AMT__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Group Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GRP_WO_FAP_REP_CNT__c</fullName>
        <label>Team Without FAP Activity</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GRP_WO_PATD_REP_CNT__c</fullName>
        <label>Team Non PATD</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Gen_1_Total_Titled_Leader_Candidates__c</fullName>
        <formula>GENRTN_1_TITL_STF_CNT__c + GENRTN_1_TITL_0_STF_CNT__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gen 1 Total Titled Leader &amp; Candidates</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>INACTV_1_3_CMPGN_CNT__c</fullName>
        <label>Inactive 1 to 3 Camp Reps Count</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>INACTV_1_PLUS_REP_CNT__c</fullName>
        <label>Inactive Camp +1</label>
        <precision>13</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>INVC_AWRD_SLS_AMT__c</fullName>
        <label>Invoiced Order Amount</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>INVC_RTURN_AWRD_SLS_AMT__c</fullName>
        <label>Return Award Sales Invoiced</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LDRSHP_TITL_LVL_NR__c</fullName>
        <label>Badge Title (Achieved Title)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LOA1_GRP_UNIT_SLS__c</fullName>
        <label>Total Unit Sales LOA1</label>
        <precision>13</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LOA_1_6_BRCHR_CNT__c</fullName>
        <defaultValue>0</defaultValue>
        <label>LOA 1-6 Brochure Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LOA_1_6_CUST_CNT__c</fullName>
        <defaultValue>0</defaultValue>
        <label>LOA 1-6 Customer Served Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LOA_1_6_GRP_UNIT_SLS__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Unit Sales LOA1-6</label>
        <precision>13</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LOA_1_6_PRSNL_VLM__c</fullName>
        <label>LOA 1-6 Personal Volume</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LOA_1_6_STF_CNT__c</fullName>
        <label>LOA 1-6 Staff</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Leadership_Summary_Key__c</fullName>
        <externalId>true</externalId>
        <label>Leadership Summary Key</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>MRKT_ACCT_KEY__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Leadership_Summary</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>MRKT_ID__c</fullName>
        <externalId>true</externalId>
        <label>Market Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NXT_BLCKD_SLS_REQD_AMT__c</fullName>
        <formula>IF (NXT_TITL_LVL_KEY__r.LDRSHP_TITL_LVL_NR_NUMBER__c &gt;=4,
IF( 
(GRP_BLCKD_UNIT_SLS_AMT__c -  NXT_TITL_LVL_KEY__r.MIN_BLCKD_SLS_REQD_AMT__c ) &lt; 0
, 
NXT_TITL_LVL_KEY__r.MIN_BLCKD_SLS_REQD_AMT__c - GRP_BLCKD_UNIT_SLS_AMT__c 
,
0), 
null
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gap to Next Title in Blocked GS</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NXT_LVL_MIN_PRSNL_SLS_REQD_AMT__c</fullName>
        <formula>IF( 
(PRSNL_SLS_AWRD_AMT__c  -  NXT_TITL_LVL_KEY__r.MIN_PRSNL_SLS_REQD_AMT__c) &lt; 0
,
NXT_TITL_LVL_KEY__r.MIN_PRSNL_SLS_REQD_AMT__c - PRSNL_SLS_AWRD_AMT__c 
,
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gap to Next Title in Personal Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NXT_MIN_G1_ACTV__c</fullName>
        <formula>IF( 
(GENTRTN_1_ACTV_REP_CNT__c -  NXT_TITL_LVL_KEY__r.MIN_REP_RCRTMNTS_REQD_NR__c) &lt; 0
,
NXT_TITL_LVL_KEY__r.MIN_REP_RCRTMNTS_REQD_NR__c - GENTRTN_1_ACTV_REP_CNT__c 
,
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gap to Next Title in G1 Actives</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NXT_MIN_GRP_SLS_REQD_AMT__c</fullName>
        <formula>IF (NXT_TITL_LVL_KEY__r.LDRSHP_TITL_LVL_NR_NUMBER__c &lt;4, 
IF( 
(GRP_UNIT_SLS_AMT__c - NXT_TITL_LVL_KEY__r.MIN_GRP_SLS_REQD_AMT__c)&lt; 0
,
NXT_TITL_LVL_KEY__r.MIN_GRP_SLS_REQD_AMT__c-GRP_UNIT_SLS_AMT__c 
,
0),
null
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gap to Next Title in Group Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NXT_TITL_LVL_KEY__c</fullName>
        <label>Next Title</label>
        <referenceTo>Leader_Title__c</referenceTo>
        <relationshipName>Leadership_Summary</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OPERTNL_CMPGN_NR__c</fullName>
        <label>Campaign</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_G1_IN_ZONE_NO_ORD_CNT__c</fullName>
        <label># G1 Inactive in Prior Campaign</label>
        <precision>13</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PERS_PERF_KEY__c</fullName>
        <label>Personal Performance Key</label>
        <referenceTo>My_Business__c</referenceTo>
        <relationshipName>Leader_Summary</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>